--- a/log.css
+++ b/log.css
@@ -28,19 +28,19 @@ h1{
     flex-direction: column;
     padding: 5%;
 }
-.lab{
-    margin-top: 2%;
-    /* margin-bottom: 1%; */
+.login-form .names{
     font-size: 17px;
+    margin-top: 2%;
     color: red;
 }
-.login .login-form .put{
+.login-form .put{
     padding: 2%;
     border: 0.5px solid gray;
     border-radius: 7px;
     background-color: rgb(223, 218, 218);
-    color: rgb(255, 0, 0);
+    /* color: rgb(255, 0, 0);   */
     font-size: 18px;
+    /* width: 60%; */
 }
 button{
     margin-top: 20px;
@@ -73,3 +73,60 @@ button{
     color: black;
     text-decoration: underline;
 }
+@media all and (min-width:320px) and (max-width: 480px){
+    .login{
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+    }
+    .sec2 {
+        width: 90%;
+        margin: 10% auto;
+    }
+    
+    .put {
+        font-size: 16px;
+    }
+    
+    button {
+        font-size: 16px;
+    }
+    
+    .names {
+        font-size: 16px;
+    }
+    
+    .account {
+        font-size: 16px;
+    }
+}
+@media all and (min-width: 480px) and (max-width: 992px) {
+    .login{
+        width: 60%;
+    }
+    .sec2 {
+        width: 90%;
+        margin: 10% auto;
+    }
+    
+    .put {
+        font-size: 16px;
+    }
+    
+    button {
+        font-size: 16px;
+    }
+    
+    .names {
+        font-size: 16px;
+    }
+    
+    .account {
+        font-size: 16px;
+    }
+}
+@media Screen and  (min-width:300px) and (max-width:992px){
+    .login{
+      margin-top: 18%;
+    }
+  }
