--- a/home.css
+++ b/home.css
@@ -15,15 +15,22 @@
     text-shadow: 1px 1px 1px red;
     margin-top: 4%;
 }
-.banner h1{
-    color: rgb(0, 221, 255);
-    font-size: 60px;
-    font-weight: bold;
-    margin-top: -10%;
-    font-family: "Lora", serif;
-    text-shadow: 1px 1px 1px rgb(255, 255, 255);
+#ban h1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  color: rgb(0, 221, 255);
+  font-size: 60px;
+  font-weight: bold;
+  margin-top: -10%;
+  font-family: "Lora", serif;
+  text-shadow: 1px 1px 1px rgb(255, 255, 255);
 
 } 
+#sec{
+  margin-top: 5%;
+}
         .well{
           font-size: 60px;
             font-family: "EB Garamond", serif;
@@ -70,8 +77,23 @@
         height: 500px;
         object-fit: cover;
       }
-      @media All and  (min-width:300px) and (max-width:992px){
+      @media All and  (min-width:300px) and (max-width:756px){
         .banner{
-          margin-top: 18%;
+          margin-top: 10%;
         }
+      }
+      @media All and  (min-width:300px) and (max-width:992px){
+        #ham{
+        width: 50px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        border: 0.5px solid black;
+      }
+      #line{
+        font-size: 20px;
+        /* color: red; */
+      }
       }
