--- a/index.css
+++ b/index.css
@@ -13,6 +13,11 @@
     border-radius: 5px;
     color: black !important;
  }
+ .navbar-toggler{
+   padding: 0px !important;
+   margin: 0px !important;
+   size: 10px !important;
+ }
  footer{
       background-color: #333;
       color: #fff;
