--- a/log.css
+++ b/log.css
@@ -130,3 +130,18 @@ button{
       margin-top: 18%;
     }
   }
+@media All and  (min-width:300px) and (max-width:992px){
+    #ham{
+    width: 50px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border: 0.5px solid black;
+  }
+  #line{
+    font-size: 20px;
+    /* color: red; */
+  }
+  }
